[project]
name = "mcp-server-prompt-enrich"
version = "0.1.0"
description = "MCP server for data science prompt enrichment templates"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Rohan Kadekodi", email = "kadekodirohan@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-prompt-enrich = "mcp_server_prompt_enrich:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "freezegun>=1.5.1",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]